[gd_scene load_steps=16 format=4 uid="uid://b2jcwq61byocm"]

[ext_resource type="Script" uid="uid://d1gfkwdgkrjg5" path="res://scripts/upgrade_shop.gd" id="1_v8ny2"]
[ext_resource type="Texture2D" uid="uid://bcuqfdntqmmht" path="res://sprites/level_spritesheet.png" id="2_mfja5"]
[ext_resource type="PackedScene" uid="uid://bmg8m4gc6adp4" path="res://scenes/player.tscn" id="3_ya5xe"]
[ext_resource type="PackedScene" uid="uid://wvlrgn6cmtt6" path="res://scenes/cave_light.tscn" id="4_ya5xe"]
[ext_resource type="Texture2D" uid="uid://b4akfd2js1ns1" path="res://sprites/inventory_slot.png" id="5_qu5s7"]
[ext_resource type="Theme" uid="uid://co0t04pkj8m4q" path="res://themes/button_theme.tres" id="6_o5je6"]
[ext_resource type="Texture2D" uid="uid://d24iq6drdtui8" path="res://sprites/resume_button.png" id="7_lt0d2"]
[ext_resource type="Texture2D" uid="uid://cbojuajek6ym" path="res://sprites/back_arrow.png" id="8_mndg8"]
[ext_resource type="PackedScene" uid="uid://b8wjhn56qqc7r" path="res://scenes/upgrade_spot.tscn" id="9_o5je6"]
[ext_resource type="Texture2D" uid="uid://c65l2d2kxsohl" path="res://sprites/pickaxe_speed_upgrade.png" id="10_lt0d2"]
[ext_resource type="Texture2D" uid="uid://bnkkp8welhwhk" path="res://sprites/mining_fortune_upgrade.png" id="11_mndg8"]
[ext_resource type="Texture2D" uid="uid://cjxpbtl5tva1r" path="res://sprites/bomb_buy_table.png" id="12_q1psx"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_54pk2"]
texture = ExtResource("2_mfja5")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 0, -8, 0, -8, 8, 8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 0, -8, 0, -8, -8, 8, -8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
6:2/0 = 0
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -8, 4, 8, -4, 8, -4, -8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -8, 4, 8, -4, 8, -4, -8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -8, 4, 8, -4, 8, -4, -8)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, -8, -8, 8, -8)
7:2/0 = 0
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 0, -8, 0, -8, 8, 8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 0, -8, 0, -8, -8, 8, -8)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 0, 8, 0, 8)
8:3/0 = 0
9:3/0 = 0
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 0, -8, 0, -8)
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, -8, 8, 0, 0)
8:2/0 = 0
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 0, 8, 0, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 0, -8, 0, -8)
5:1/0 = 0
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 0, 0, 0, 0)
6:1/0 = 0
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 0, 0, 0, 0)
7:1/0 = 0
8:1/0 = 0
9:2/0 = 0
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 0, 8, -8, -8, -8, -8, 8, 8, 8)
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 0, 8, -8, -8, -8, -8, 8, 8, 8)
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 0, -8, 0, -8, 8, 8, 8)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 0, -8, 0, -8, -8, 8, -8)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 0, 8, 0, 8)
4:6/0 = 0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 0, -8, 0, -8)
5:6/0 = 0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, -8, 8, 0, 0)
6:6/0 = 0
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 0, 0, 0, 0)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 0, 8, -8, -8, -8, -8, 8, 8, 8)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 0, 8, -8, -8, -8, -8, 8, 8, 8)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 0, 8, -8, -8, -8, -8, 8, 8, 8)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 0, 8, -8, -8, -8, -8, 8, 8, 8)
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 0, 0, 0, 0)
7:6/0 = 0
0:7/0 = 0
0:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:7/0 = 0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:7/0 = 0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:7/0 = 0
3:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_8qunu"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_54pk2")

[sub_resource type="CircleShape2D" id="CircleShape2D_ya5xe"]
radius = 27.0

[node name="upgrade_shop" type="Node2D"]
script = ExtResource("1_v8ny2")

[node name="ShopTilemap" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAyAEIAAAAAAAAAAAAyAEMAAAADAAcAAAAyAEQAAAAAAAQAAAAyAEUAAAAAAAQAAAAzAEIAAAAAAAAAAAAzAEMAAAADAAcAAAAzAEQAAAAAAAQAAAAzAEUAAAAAAAQAAAA0AEIAAAAAAAAAAAA0AEMAAAAAAAQAAAA0AEQAAAAAAAQAAAA0AEUAAAAAAAQAAAA1AEIAAAAAAAAAAAA1AEMAAAAAAAQAAAA1AEQAAAAAAAQAAAA1AEUAAAAAAAQAAAA2AEIAAAAAAAAAAAA2AEMAAAAAAAQAAAA2AEQAAAAAAAQAAAA2AEUAAAAAAAQAAAA3AEIAAAAAAAQAAAA3AEMAAAAAAAQAAAA3AEQAAAAAAAQAAAA3AEUAAAAAAAQAAAA4AEIAAAAAAAQAAAA4AEMAAAAAAAQAAAA4AEQAAAAAAAQAAAA4AEUAAAAAAAQAAAA5AEIAAAAAAAQAAAA5AEMAAAAAAAQAAAA5AEQAAAAAAAQAAAA5AEUAAAAAAAQAAAA6AEIAAAAAAAQAAAA6AEMAAAAAAAQAAAA6AEQAAAAAAAQAAAA6AEUAAAAAAAQAAAA7AEIAAAAAAAQAAAA7AEMAAAAAAAQAAAA7AEQAAAAAAAQAAAA7AEUAAAAAAAQAAAA8AEIAAAAAAAQAAAA8AEMAAAAAAAQAAAA8AEQAAAAAAAQAAAA8AEUAAAAAAAQAAAA9AEIAAAAAAAQAAAA9AEMAAAAAAAQAAAA9AEQAAAAAAAQAAAA9AEUAAAAAAAQAAAA+AEIAAAAAAAQAAAA+AEMAAAAAAAQAAAA+AEQAAAAAAAQAAAA+AEUAAAAAAAQAAAA/AEIAAAAAAAQAAAA/AEMAAAAAAAQAAAA/AEQAAAAAAAQAAAA/AEUAAAAAAAQAAABAAEIAAAAAAAQAAABAAEMAAAAAAAQAAABAAEQAAAAAAAQAAABAAEUAAAAAAAQAAABBAEIAAAAAAAQAAABBAEMAAAAAAAQAAABBAEQAAAAAAAQAAABBAEUAAAAAAAQAAABCAEIAAAAAAAQAAABCAEMAAAAAAAQAAABCAEQAAAAAAAQAAABCAEUAAAAAAAQAAABDAEIAAAADAAcAAABDAEMAAAAAAAQAAABDAEQAAAAAAAQAAABDAEUAAAAAAAQAAABEAEIAAAADAAcAAABEAEMAAAAAAAQAAABEAEQAAAAAAAQAAABEAEUAAAAAAAQAAABFAEIAAAADAAcAAABFAEMAAAAAAAQAAABFAEQAAAAAAAQAAABFAEUAAAAAAAQAAABGAEIAAAADAAcAAABGAEMAAAAAAAQAAABGAEQAAAAAAAQAAABGAEUAAAAAAAQAAABHAEIAAAAAAAAAAABHAEMAAAAAAAQAAABHAEQAAAAAAAQAAABHAEUAAAAAAAQAAABIAEIAAAAAAAAAAABIAEMAAAAAAAQAAABIAEQAAAAAAAQAAABIAEUAAAAAAAQAAAAoAEEAAAAAAAQAAAAoAEIAAAAAAAQAAAAoAEMAAAAAAAQAAAAoAEQAAAAAAAQAAAApAEEAAAAAAAQAAAApAEIAAAAAAAQAAAApAEMAAAAAAAQAAAApAEQAAAAAAAQAAAAqAEEAAAAAAAQAAAAqAEIAAAAAAAQAAAAqAEMAAAAAAAQAAAAqAEQAAAAAAAQAAAArAEEAAAAAAAQAAAArAEIAAAAAAAQAAAArAEMAAAAAAAQAAAArAEQAAAAAAAQAAAAsAEEAAAAAAAQAAAAsAEIAAAAAAAQAAAAsAEMAAAAAAAQAAAAsAEQAAAAAAAQAAAAtAEEAAAADAAcAAAAtAEIAAAAAAAQAAAAtAEMAAAAAAAQAAAAtAEQAAAAAAAQAAAAuAEEAAAAAAAAAAAAuAEIAAAADAAcAAAAuAEMAAAAAAAQAAAAuAEQAAAAAAAQAAAAvAEEAAAAAAAAAAAAvAEIAAAAAAAAAAAAvAEMAAAAAAAQAAAAvAEQAAAAAAAQAAAAwAEEAAAAAAAAAAAAwAEIAAAAAAAAAAAAwAEMAAAADAAcAAAAwAEQAAAAAAAQAAAAxAEEAAAAAAAAAAAAxAEIAAAAAAAAAAAAxAEMAAAADAAcAAAAxAEQAAAAAAAQAAABJAEIAAAAAAAAAAABJAEMAAAAAAAAAAABJAEQAAAAAAAQAAABKAEIAAAAAAAAAAABKAEMAAAAAAAAAAABKAEQAAAAAAAQAAABLAEIAAAAAAAAAAABLAEMAAAACAAcAAABLAEQAAAAAAAQAAABMAEIAAAADAAcAAABMAEMAAAAAAAQAAABMAEQAAAAAAAQAAABNAEIAAAADAAcAAABNAEMAAAAAAAQAAABNAEQAAAAAAAQAAABOAEIAAAADAAcAAABOAEMAAAAAAAQAAABOAEQAAAAAAAQAAABPAEIAAAAAAAAAAABPAEMAAAAAAAQAAABPAEQAAAAAAAQAAABQAEIAAAAAAAQAAABQAEMAAAAAAAQAAABQAEQAAAAAAAQAAABRAEIAAAAAAAQAAAAnAEAAAAAAAAQAAAAnAD8AAAAAAAQAAAAmAD8AAAAAAAQAAAAmAD4AAAAAAAQAAAAmAD0AAAAAAAQAAAAmADwAAAAAAAQAAAAlADwAAAAAAAQAAAAlADsAAAAAAAQAAAAlADoAAAAAAAQAAAAkADoAAAAAAAQAAAAkADkAAAAAAAQAAAAkADgAAAAAAAQAAAAkADcAAAAAAAQAAAAkADYAAAAAAAQAAAAkADUAAAAAAAQAAAAkADQAAAAAAAQAAAAlADQAAAAAAAQAAAAlADMAAAAAAAQAAAAlADIAAAAAAAQAAAAmADIAAAAAAAQAAAAmADEAAAAAAAQAAAAmADAAAAAAAAQAAAAnADAAAAAAAAQAAAAnAC8AAAAAAAQAAAAoAC8AAAAAAAQAAAAoAC4AAAAAAAQAAAApAC0AAAAAAAQAAAAqAC0AAAAAAAQAAAArACwAAAAAAAQAAAAsACwAAAAAAAQAAAAtACwAAAAAAAQAAAAtACsAAAAAAAQAAAAuACsAAAAAAAQAAAAvACsAAAAAAAQAAAAvACoAAAAAAAQAAAAwACoAAAAAAAQAAAAxACoAAAAAAAQAAAAxACkAAAAAAAQAAAAyACkAAAAAAAQAAAAyACgAAAAAAAQAAAAzACgAAAAAAAQAAAAzACcAAAAAAAQAAAA0ACcAAAAAAAQAAAA1ACcAAAAAAAQAAAA1ACYAAAAAAAQAAAA2ACYAAAAAAAQAAAA3ACUAAAAAAAQAAAA4ACUAAAAAAAQAAAA4ACQAAAAAAAQAAAA5ACQAAAAAAAQAAAA6ACQAAAAAAAQAAAA6ACMAAAAAAAQAAAA7ACMAAAAAAAQAAAA8ACMAAAAAAAQAAAA9ACMAAAAAAAQAAAA+ACMAAAAAAAQAAAA/ACMAAAAAAAQAAABAACMAAAAAAAQAAABBACMAAAAAAAQAAABCACMAAAAAAAQAAABDACMAAAAAAAQAAABEACMAAAAAAAQAAABEACQAAAAAAAQAAABFACQAAAAAAAQAAABGACQAAAAAAAQAAABHACQAAAAAAAQAAABHACUAAAAAAAQAAABIACUAAAAAAAQAAABJACUAAAAAAAQAAABKACYAAAAAAAQAAABKACcAAAAAAAQAAABLACcAAAAAAAQAAABLACgAAAAAAAQAAABLACkAAAAAAAQAAABMACkAAAAAAAQAAABMACoAAAAAAAQAAABNACoAAAAAAAQAAABNACsAAAAAAAQAAABOACsAAAAAAAQAAABPACwAAAAAAAQAAABQACwAAAAAAAQAAABQAC0AAAAAAAQAAABRAC0AAAAAAAQAAABSAC0AAAAAAAQAAABSAC4AAAAAAAQAAABTAC4AAAAAAAQAAAAnAEMAAAAAAAQAAAAmAEIAAAAAAAQAAAAmAEEAAAAAAAQAAAAlAEEAAAAAAAQAAAAlAEAAAAAAAAQAAAAlAD8AAAAAAAQAAAAkAD8AAAAAAAQAAAAkAD4AAAAAAAQAAAAkAD0AAAAAAAQAAAAjAD0AAAAAAAQAAAAjADwAAAAAAAQAAAAlAD4AAAAAAAQAAAAmAEAAAAAAAAQAAAAnAEEAAAAAAAQAAAAnAEIAAAAAAAQAAAAjADsAAAAAAAQAAAAkADwAAAAAAAQAAAAlAD0AAAAAAAQAAAAkADsAAAAAAAQAAAAjADoAAAAAAAQAAAAjADkAAAAAAAQAAAAiADoAAAAAAAQAAAAiADsAAAAAAAQAAAAiADwAAAAAAAQAAAAiADkAAAAAAAQAAAAjADgAAAAAAAQAAAAjADcAAAAAAAQAAAAjADYAAAAAAAQAAAAjADUAAAAAAAQAAAAiADcAAAAAAAQAAAAiADgAAAAAAAQAAAAiADYAAAAAAAQAAAAiADUAAAAAAAQAAAAjADQAAAAAAAQAAAAiADQAAAAAAAQAAAAiADMAAAAAAAQAAAAjADMAAAAAAAQAAAAjADIAAAAAAAQAAAAkADEAAAAAAAQAAAAkADAAAAAAAAQAAAAlAC8AAAAAAAQAAAAmAC4AAAAAAAQAAAAmAC8AAAAAAAQAAAAlADAAAAAAAAQAAAAlADEAAAAAAAQAAAAkADIAAAAAAAQAAAAkADMAAAAAAAQAAAAmAC0AAAAAAAQAAAAnAC0AAAAAAAQAAAAnACwAAAAAAAQAAAAoACwAAAAAAAQAAAApACsAAAAAAAQAAAApACwAAAAAAAQAAAAoAC0AAAAAAAQAAAAnAC4AAAAAAAQAAAAqACsAAAAAAAQAAAArACsAAAAAAAQAAAArACoAAAAAAAQAAAAsACoAAAAAAAQAAAAtACoAAAAAAAQAAAAtACkAAAAAAAQAAAAuACkAAAAAAAQAAAAvACkAAAAAAAQAAAAuACoAAAAAAAQAAAAsACsAAAAAAAQAAAAqACwAAAAAAAQAAAAwACgAAAAAAAQAAAAxACgAAAAAAAQAAAAxACcAAAAAAAQAAAAyACcAAAAAAAQAAAAyACYAAAAAAAQAAAAzACYAAAAAAAQAAAAzACUAAAAAAAQAAAA0ACUAAAAAAAQAAAA1ACUAAAAAAAQAAAA2ACQAAAAAAAQAAAA3ACQAAAAAAAQAAAA4ACMAAAAAAAQAAAA2ACUAAAAAAAQAAAA0ACYAAAAAAAQAAAAwACkAAAAAAAQAAAAmACwAAAAAAAQAAAAnACsAAAAAAAQAAAAoACsAAAAAAAQAAAAoACoAAAAAAAQAAAApACoAAAAAAAQAAAAqACkAAAAAAAQAAAArACkAAAAAAAQAAAArACgAAAAAAAQAAAAsACgAAAAAAAQAAAAtACcAAAAAAAQAAAAuACcAAAAAAAQAAAAuACYAAAAAAAQAAAAvACYAAAAAAAQAAAAwACYAAAAAAAQAAAAwACUAAAAAAAQAAAAxACUAAAAAAAQAAAAyACUAAAAAAAQAAAAzACQAAAAAAAQAAAA0ACQAAAAAAAQAAAA1ACQAAAAAAAQAAAAxACYAAAAAAAQAAAAwACcAAAAAAAQAAAAvACcAAAAAAAQAAAAvACgAAAAAAAQAAAAuACgAAAAAAAQAAAAtACgAAAAAAAQAAAAsACkAAAAAAAQAAAAqACoAAAAAAAQAAAAlAC4AAAAAAAQAAAAkAC8AAAAAAAQAAAAjADEAAAAAAAQAAAAiADIAAAAAAAQAAAA1ACMAAAAAAAQAAAA2ACMAAAAAAAQAAAA2ACIAAAAAAAQAAAA3ACIAAAAAAAQAAAA4ACEAAAAAAAQAAAA5ACEAAAAAAAQAAAA6ACEAAAAAAAQAAAA6ACAAAAAAAAQAAAA7ACAAAAAAAAQAAAA8ACAAAAAAAAQAAAA9ACAAAAAAAAQAAAA+ACAAAAAAAAQAAAA/ACAAAAAAAAQAAABAACAAAAAAAAQAAABBACEAAAAAAAQAAABCACEAAAAAAAQAAABDACEAAAAAAAQAAABEACEAAAAAAAQAAABFACEAAAAAAAQAAABGACEAAAAAAAQAAABHACEAAAAAAAQAAABIACEAAAAAAAQAAABIACIAAAAAAAQAAABHACIAAAAAAAQAAABGACIAAAAAAAQAAABFACIAAAAAAAQAAABEACIAAAAAAAQAAABDACIAAAAAAAQAAABCACIAAAAAAAQAAABBACIAAAAAAAQAAABAACIAAAAAAAQAAAA/ACIAAAAAAAQAAAA+ACIAAAAAAAQAAAA9ACIAAAAAAAQAAAA8ACIAAAAAAAQAAAA7ACIAAAAAAAQAAAA6ACIAAAAAAAQAAAA5ACMAAAAAAAQAAAA3ACMAAAAAAAQAAAA4ACIAAAAAAAQAAAA5ACIAAAAAAAQAAAA7ACEAAAAAAAQAAAA8ACEAAAAAAAQAAAA9ACEAAAAAAAQAAAA+ACEAAAAAAAQAAAA/ACEAAAAAAAQAAABAACEAAAAAAAQAAABIACMAAAAAAAQAAABJACMAAAAAAAQAAABJACQAAAAAAAQAAABKACQAAAAAAAQAAABHACMAAAAAAAQAAABGACMAAAAAAAQAAABFACMAAAAAAAQAAABIACQAAAAAAAQAAABKACUAAAAAAAQAAABLACUAAAAAAAQAAABLACYAAAAAAAQAAABMACYAAAAAAAQAAABKACMAAAAAAAQAAABJACIAAAAAAAQAAABKACIAAAAAAAQAAABLACMAAAAAAAQAAABLACQAAAAAAAQAAABMACQAAAAAAAQAAABMACUAAAAAAAQAAABNACUAAAAAAAQAAABNACYAAAAAAAQAAABOACYAAAAAAAQAAABOACcAAAAAAAQAAABPACcAAAAAAAQAAABPACgAAAAAAAQAAABMACcAAAAAAAQAAABNACcAAAAAAAQAAABNACgAAAAAAAQAAABOACgAAAAAAAQAAABOACkAAAAAAAQAAABPACkAAAAAAAQAAABQACkAAAAAAAQAAABQACoAAAAAAAQAAABRACoAAAAAAAQAAABSACsAAAAAAAQAAABTACwAAAAAAAQAAABMACgAAAAAAAQAAABNACkAAAAAAAQAAABOACoAAAAAAAQAAABPACoAAAAAAAQAAABPACsAAAAAAAQAAABQACsAAAAAAAQAAABRACwAAAAAAAQAAABSACwAAAAAAAQAAABTAC0AAAAAAAQAAABRACsAAAAAAAQAAAAmADMAAAACAAQAAAAnADEAAAADAAQAAAAoADAAAAACAAQAAAApAC4AAAADAAQAAAArAC0AAAACAAQAAAAuACwAAAACAAQAAAAwACsAAAAHAAUAAAAzACkAAAACAAQAAAA3ACYAAAACAAQAAAA7ACQAAAADAAQAAAA8ACQAAAADAAQAAAA9ACQAAAACAAQAAAA+ACQAAAACAAQAAABDACQAAAACAAQAAABGACUAAAACAAQAAABJACYAAAACAAQAAABLACoAAAACAAQAAABRAC4AAAACAAQAAABTAC8AAAACAAQAAAApAEAAAAABAAQAAAAoAEAAAAABAAQAAAAnAD4AAAABAAQAAAAlADkAAAABAAQAAAAlADUAAAADAAQAAAAqAC4AAAADAAQAAAAsAC0AAAADAAQAAAAtAC0AAAADAAQAAAAyACoAAAADAAQAAAA0ACgAAAADAAQAAAA4ACYAAAADAAQAAABHACYAAAADAAQAAABKACgAAAADAAQAAABMACsAAAADAAQAAABQAC4AAAADAAQAAABSAC8AAAADAAQAAAA2AEEAAAAAAAAAAAA3AEEAAAADAAcAAAA4AEEAAAADAAcAAAAyAEEAAAAAAAAAAAAzAEEAAAAAAAAAAAA0AEEAAAAAAAAAAAA1AEEAAAAAAAAAAAA1AD8AAAAAAAAAAAA1AEAAAAAAAAAAAAA0AEAAAAAAAAAAAAAzAD8AAAAAAAAAAAAzAEAAAAAAAAAAAAAyAEAAAAAAAAAAAAA2AEAAAAAAAAAAAAA0AD4AAAAIAAEAAAA0AD8AAAAIAAEAAAAwACwAAAAHAAUAAAAwAC0AAAAHAAUAAAAwAC4AAAAHAAUAAAAwAC8AAAAHAAUAAAAwADAAAAAHAAUAAAAwADEAAAAHAAUAAAAwADIAAAAHAAUAAAAwADMAAAAHAAUAAAAwADQAAAAHAAUAAAAwADUAAAAHAAUAAAA6ACUAAAAHAAUAAAA6ACYAAAAHAAUAAAA6ACcAAAAHAAUAAAA6ACgAAAAHAAUAAAA6ACkAAAAHAAUAAAA6ACoAAAAHAAUAAAA6ACsAAAAHAAUAAAA6ACwAAAAHAAUAAAA6AC0AAAAHAAUAAAA6AC4AAAAHAAUAAAA6AC8AAAAHAAUAAAA6ADAAAAAHAAUAAABPADUAAAAHAAUAAABPADQAAAAHAAUAAABPADMAAAAHAAUAAABPADIAAAAHAAUAAABPADEAAAAHAAUAAABPADAAAAAHAAUAAABPAC8AAAAHAAUAAABPAC4AAAAHAAUAAABPAC0AAAAHAAUAAAAwADYAAAAFAAUAAAA6ADEAAAAFAAUAAABPADYAAAAFAAUAAAAqAEAAAAAHAAYAAAAmADsAAAAHAAYAAABUAC4AAAAAAAQAAABUAC8AAAAAAAQAAABVAC8AAAAAAAQAAABVADAAAAAAAAQAAABVADEAAAAAAAQAAABWADEAAAAAAAQAAABWADIAAAAAAAQAAABWADMAAAAAAAQAAABWADQAAAAAAAQAAABWADUAAAAAAAQAAABWADYAAAAAAAQAAABWADcAAAAAAAQAAABWADgAAAAAAAQAAABWADkAAAAAAAQAAABWADoAAAAAAAQAAABWADsAAAAAAAQAAABWADwAAAAAAAQAAABWAD0AAAAAAAQAAABVAD0AAAAAAAQAAABVAD4AAAAAAAQAAABVAD8AAAAAAAQAAABUAD8AAAAAAAQAAABUAEAAAAAAAAQAAABTAEAAAAAAAAQAAABTAEEAAAAAAAQAAABSAEEAAAAAAAQAAABSAEIAAAAAAAQAAABRAEQAAAACAAQAAABRAEMAAAAAAAQAAABSAEMAAAAAAAQAAABTAEIAAAAAAAQAAABUAEEAAAAAAAQAAABVAEAAAAAAAAQAAABWAD8AAAAAAAQAAABWAD4AAAAAAAQAAABUAC0AAAAAAAQAAABVAC4AAAAAAAQAAABWAC8AAAAAAAQAAABWADAAAAAAAAQAAABXADIAAAAAAAQAAABXADMAAAAAAAQAAABXADQAAAAAAAQAAABXADUAAAAAAAQAAABXADYAAAAAAAQAAABXADEAAAAAAAQAAABYADYAAAAAAAQAAABYADcAAAAAAAQAAABYADgAAAAAAAQAAABYADkAAAAAAAQAAABXADkAAAAAAAQAAABXADoAAAAAAAQAAABXADsAAAAAAAQAAABXADwAAAAAAAQAAABXAD0AAAAAAAQAAABXADgAAAAAAAQAAABXADcAAAAAAAQAAABYADoAAAACAAQAAABWAEAAAAACAAQAAABUAEIAAAACAAQAAABJAEUAAAACAAQAAABKAEUAAAACAAQAAABLAEUAAAACAAQAAABXAD4AAAADAAQAAABVAEEAAAADAAQAAABYADUAAAAEAAQAAABXADAAAAAEAAQAAABWAC4AAAABAAQAAABTACsAAAABAAQAAABQACgAAAABAAQAAABOACUAAAABAAQAAABBACAAAAABAAQAAABCACAAAAABAAQAAABDACAAAAABAAQAAABEACAAAAABAAQAAABFACAAAAABAAQAAABVADgAAAAAAAQAAABVADkAAAAAAAQAAABVADoAAAAAAAQAAABVADsAAAAAAAQAAABVADwAAAAAAAQAAABUADwAAAAAAAQAAABUAD0AAAAAAAQAAABUAD4AAAAAAAQAAABTAD8AAAAAAAQAAABSAEAAAAAEAAQAAABRAEEAAAAAAAQAAABQAEEAAAAAAAQAAABPAEEAAAAAAAQAAABOAEEAAAAFAAAAAABRAEAAAAAEAAQAAABTAD4AAAAEAAQAAABVADcAAAAEAAQAAABPAEAAAAAFAAQAAABUADsAAAAFAAQAAAA=")
tile_set = SubResource("TileSet_8qunu")

[node name="Player" parent="." instance=ExtResource("3_ya5xe")]
position = Vector2(856, 999)

[node name="CaveLights" type="Node2D" parent="."]

[node name="CaveLight1" parent="CaveLights" instance=ExtResource("4_ya5xe")]
position = Vector2(776, 876)

[node name="CaveLight2" parent="CaveLights" instance=ExtResource("4_ya5xe")]
position = Vector2(936, 796)

[node name="CaveLight3" parent="CaveLights" instance=ExtResource("4_ya5xe")]
position = Vector2(1272, 876)

[node name="CaveLight4" parent="CaveLights" instance=ExtResource("4_ya5xe")]
position = Vector2(680, 1030)

[node name="CaveLight5" parent="CaveLights" instance=ExtResource("4_ya5xe")]
position = Vector2(841, 1008)

[node name="CaveLight6" parent="CaveLights" instance=ExtResource("4_ya5xe")]
position = Vector2(1117, 1024)

[node name="CaveLight10" parent="CaveLights" instance=ExtResource("4_ya5xe")]
position = Vector2(1057, 1024)

[node name="CaveLight11" parent="CaveLights" instance=ExtResource("4_ya5xe")]
position = Vector2(997, 1024)

[node name="CaveLight7" parent="CaveLights" instance=ExtResource("4_ya5xe")]
position = Vector2(1177, 1024)

[node name="CaveLight8" parent="CaveLights" instance=ExtResource("4_ya5xe")]
position = Vector2(616, 950)

[node name="CaveLight9" parent="CaveLights" instance=ExtResource("4_ya5xe")]
position = Vector2(680, 1030)

[node name="LevelEntrance" type="Area2D" parent="."]
position = Vector2(841, 1008)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelEntrance"]
shape = SubResource("CircleShape2D_ya5xe")

[node name="PauseMenu" type="CanvasLayer" parent="."]
process_mode = 3
visible = false

[node name="Control" type="Control" parent="PauseMenu"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="NinePatchRect" type="NinePatchRect" parent="PauseMenu/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -128.0
offset_right = 150.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_qu5s7")
region_rect = Rect2(0, 0, 34, 18)
patch_margin_left = 7
patch_margin_top = 7
patch_margin_right = 7
patch_margin_bottom = 7

[node name="BoxContainer" type="BoxContainer" parent="PauseMenu/Control/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="BoxContainer" type="BoxContainer" parent="PauseMenu/Control/NinePatchRect/BoxContainer"]
layout_mode = 2
alignment = 1
vertical = true

[node name="Resume" type="Button" parent="PauseMenu/Control/NinePatchRect/BoxContainer/BoxContainer"]
layout_mode = 2
theme = ExtResource("6_o5je6")
text = "Resume"
icon = ExtResource("7_lt0d2")

[node name="MainMenuButton" type="Button" parent="PauseMenu/Control/NinePatchRect/BoxContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("6_o5je6")
text = "Main Menu"
icon = ExtResource("8_mndg8")

[node name="UpgradeSpot1" parent="." node_paths=PackedStringArray("player") instance=ExtResource("9_o5je6")]
position = Vector2(997, 1024)
player = NodePath("../Player")
upgrade_texture = ExtResource("10_lt0d2")
cost = 10
upgrade_power = -0.1

[node name="UpgradeSpot2" parent="." node_paths=PackedStringArray("player") instance=ExtResource("9_o5je6")]
position = Vector2(1057, 1024)
player = NodePath("../Player")
upgrade_texture = ExtResource("11_mndg8")
upgrades_value = 1
cost = 20
upgrade_power = 0.5

[node name="UpgradeSpot3" parent="." node_paths=PackedStringArray("player") instance=ExtResource("9_o5je6")]
position = Vector2(1117, 1024)
player = NodePath("../Player")
upgrade_texture = ExtResource("12_q1psx")
upgrades_value = 2
cost = 50
upgrade_power = 1.0

[node name="UpgradeSpot4" parent="." node_paths=PackedStringArray("player") instance=ExtResource("9_o5je6")]
position = Vector2(1177, 1024)
player = NodePath("../Player")
upgrade_texture = ExtResource("12_q1psx")
upgrades_value = 3
cost = 50
upgrade_power = 1.0

[connection signal="area_entered" from="LevelEntrance" to="." method="_on_level_entrance_area_entered"]
[connection signal="area_exited" from="LevelEntrance" to="." method="_on_level_entrance_area_exited"]
[connection signal="pressed" from="PauseMenu/Control/NinePatchRect/BoxContainer/BoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/Control/NinePatchRect/BoxContainer/BoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
